--- a/CoordinateServer/web.config
+++ b/CoordinateServer/web.config
@@ -13,6 +13,30 @@
         </rule>
       </rules>
     </rewrite>
-
+    <!--<httpCompression>
+      <remove name="gzip" />
+      <scheme name="gzip" dynamicCompressionLevel="9" staticCompressionLevel="9" doDynamicCompression="true" doStaticCompression="true" dll="%Windir%\system32\inetsrv\gzip.dll" />
+      <dynamicTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="message/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/x-javascript" enabled="true" />
+        <add mimeType="text/css" enabled="true" />
+        <add mimeType="text/javascript" enabled="true" />
+        <add mimeType="application/javascript; charset=utf-8" enabled="true" />
+        <add mimeType="*/*" enabled="true"/>
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="text/css" enabled="true" />
+        <add mimeType="text/javascript" enabled="true" />
+        <add mimeType="message/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/x-javascript" enabled="true" />
+        <add mimeType="application/javascript; charset=utf-8" enabled="true" />
+        <add mimeType="*/*" enabled="true"/>
+      </staticTypes>
+    </httpCompression>
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" dynamicCompressionBeforeCache="true" />-->
   </system.webServer>
 </configuration>
