--- a/CoordinateServer/web.config
+++ b/CoordinateServer/web.config
@@ -9,7 +9,7 @@
       <rules>
         <rule name="CoordinateServer">
           <match url="/*" />
-          <action type="Rewrite" url="server.js" />
+          <action type="Rewrite" url="build/server.js" />
         </rule>
       </rules>
     </rewrite>
