--- a/CoordinateServer/tsconfig.json
+++ b/CoordinateServer/tsconfig.json
@@ -5,16 +5,17 @@
     "noImplicitAny": true,
     "sourceMap": false,
     "noEmitOnError": true,
-    "rootDir": "."
+    "rootDir": ".",
+    "outDir": "build"
   },
   "files": [  
-    "Scripts/typings/compression.d.ts",
-    "Scripts/typings/es6-collections.d.ts",
-    "Scripts/typings/express.d.ts",
-    "Scripts/typings/node.d.ts",
-    "Scripts/typings/LiteMol-core.d.ts",
+    "src/typings/compression.d.ts",
+    "src/typings/es6-collections.d.ts",
+    "src/typings/express.d.ts",
+    "src/typings/node.d.ts",
+    "src/typings/LiteMol-core.d.ts",
 
-    "server.ts",
-    "local.ts"
+    "src/server.ts",
+    "src/local.ts"
   ]
 }
