--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.ntvs_analysis.dat
 .ntvs_analysis.dat
 ntvs_analysis.dat
+*.ntvs_analysis.dat.*
+.ntvs_analysis.dat.*
+ntvs_analysis.dat.*
 CoordinateServer/.ntvs_analysis.dat
 .vs/
 obj/
