--- a/CoordinateServer/tsconfig.json
+++ b/CoordinateServer/tsconfig.json
@@ -5,12 +5,15 @@
     "noImplicitAny": true,
     "sourceMap": false,
     "noEmitOnError": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "lib": [ "es5", "es2015.collection", "dom" ],
     "rootDir": "./src",
     "outDir": "./build"
   },
   "files": [  
     "./src/typings/compression.d.ts",
-    "./src/typings/es6-collections.d.ts",
+    //"./src/typings/es6-collections.d.ts",
     "./src/typings/express.d.ts",
     "./src/typings/node.d.ts",
     "./src/typings/LiteMol-core.d.ts",
